<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElevationLogger</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Raw Values</string>
    <string name="title_section3">Trace List</string>
    <string name="btn_start_gps">Start GPS</string>
    <string name="btn_start_air">Start Air Pressure</string>
    <string name="txt_gps">GPS</string>
    <string name="txt_gps_lat">Latitude:</string>
    <string name="txt_gps_long">Longitude:</string>
    <string name="txt_gps_acc">Accuracy:</string>
    <string name="txt_gps_alt">Altitude:</string>
    <string name="txt_osm_header">OSM</string>
    <string name="txt_osm_id">OSM ID:</string>
    <string name="txt_osm_dist">Distance:</string>
    <string name="txt_empty">-</string>
    <string name="txt_air">Air Pressure</string>
    <string name="txt_air_pressure">Pressure:</string>
    <string name="txt_console">Event Log</string>
    <string name="service_name">Sensor Service</string>
    <string name="txt_gps_time">GPS Time:</string>
    <string name="txt_service">Toggle Service</string>
    <string name="txt_air_altitude">Altitude:</string>
    <string name="txt_sendResults">Send Results</string>
    <string name="txt_traceList">Current traces in DB:</string>
    <string name="osm_db">koeln-regbez-latest.sqlite</string>

</resources>
