<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/txt_gps"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/h_divider2"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@id/tv_gps"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="10dip"
        android:background="?android:attr/dividerVertical" />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_gps"
        android:layout_below="@+id/h_divider2"
        android:layout_marginTop="25dp"
        android:text="@string/txt_gps_lat"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_lat"
        android:layout_below="@+id/tv_lat"
        android:layout_marginTop="10dp"
        android:text="@string/txt_gps_long"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_air"
        android:layout_below="@id/tv_long"
        android:layout_marginTop="10dp"
        android:text="@string/txt_gps_time"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_long"
        android:layout_marginLeft="100dp"
        android:layout_toRightOf="@+id/tv_long"
        android:text="@string/txt_gps_alt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_long"
        android:layout_alignLeft="@+id/tv_alt"
        android:text="@string/txt_gps_acc"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_lat_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_long"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tv_long"
        android:text="@string/txt_empty" />

    <TextView
        android:id="@+id/tv_long_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_long"
        android:layout_alignLeft="@+id/tv_lat_res"
        android:text="@string/txt_empty" />

    <TextView
        android:id="@+id/tv_time_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_time"
        android:layout_alignLeft="@+id/tv_long_res"
        android:text="@string/txt_empty" />

    <TextView
        android:id="@+id/tv_alt_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_alt"
        android:layout_alignBottom="@+id/tv_alt"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tv_acc"
        android:text="@string/txt_empty" />

    <TextView
        android:id="@+id/tv_acc_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_acc"
        android:layout_alignBottom="@+id/tv_acc"
        android:layout_alignLeft="@+id/tv_alt_res"
        android:text="@string/txt_empty" />

    <TextView
        android:id="@+id/tv_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_long"
        android:layout_below="@id/tv_long"
        android:layout_marginTop="50dp"
        android:text="@string/txt_air"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/h_divider4"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@id/tv_air"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="10dip"
        android:background="?android:attr/dividerVertical" />

    <TextView
        android:id="@+id/tv_air_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_air"
        android:layout_below="@+id/h_divider4"
        android:layout_marginTop="25dp"
        android:text="@string/txt_air_pressure"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_air_pressure_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_air_pressure"
        android:layout_alignBottom="@+id/tv_air_pressure"
        android:layout_alignLeft="@+id/tv_long_res"
        android:text="@string/txt_empty" />

    <TextView
        android:id="@+id/tv_air_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_air_pressure"
        android:layout_below="@+id/tv_air_pressure"
        android:layout_marginTop="18dp"
        android:text="@string/txt_air_altitude"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_air_altitude_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_air_altitude"
        android:layout_alignBottom="@+id/tv_air_altitude"
        android:layout_alignLeft="@+id/tv_air_pressure_res"
        android:text="@string/txt_empty" />

    <TextView
        android:id="@+id/tv_osm_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_air_altitude"
        android:layout_below="@+id/tv_air_altitude"
        android:layout_marginTop="14dp"
        android:text="@string/txt_osm_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/h_divider5"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_osm_header"
        android:layout_marginTop="10dp"
        android:background="?android:attr/dividerVertical" />

    <TextView
        android:id="@+id/tv_osm_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_osm_header"
        android:layout_below="@+id/h_divider5"
        android:layout_marginTop="20dp"
        android:text="@string/txt_osm_id"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_osm_dist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_osm_id"
        android:layout_below="@+id/tv_osm_id"
        android:layout_marginTop="10dp"
        android:text="@string/txt_osm_dist"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/tv_osm_id_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_osm_id"
        android:layout_alignBottom="@+id/tv_osm_id"
        android:layout_alignLeft="@+id/tv_air_altitude_res"
        android:text="@string/txt_empty" />
    
    <TextView
        android:id="@+id/tv_osm_dist_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_osm_dist"
        android:layout_alignBottom="@+id/tv_osm_dist"
        android:layout_alignLeft="@+id/tv_osm_id_res"
        android:text="@string/txt_empty" />

</RelativeLayout>